force-app/main/default/objects/GPON__c/GPON__c.object-meta.xml
<CustomObject>
    <label>GPON</label>
    <nameField>
        <label>GPON Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPONs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>