force-app/main/default/objects/GPON__c/fields/Circles__c.field-meta.xml
<CustomField>
    <fullName>Circles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circles</label>
    <referenceTo>Circles__c</referenceTo>
    <relationshipLabel>GPONs</relationshipLabel>
    <relationshipName>GPONs</relationshipName>
    <type>Lookup</type>
</CustomField>