force-app/main/default/objects/GPON__c/fields/FDCLocation__c.field-meta.xml
<CustomField>
    <fullName>FDCLocation__c</fullName>
    <label>FDC Location</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>