force-app/main/default/objects/GPON__c/fields/FieldEngineer__c.field-meta.xml
<CustomField>
    <fullName>FieldEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field Engineer who is responsible for maintenance/issue fix of this GPON</description>
    <inlineHelpText>Field Engineer who is responsible for maintenance/issue fix of this GPON</inlineHelpText>
    <label>Field Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GPONs</relationshipName>
    <type>Lookup</type>
</CustomField>