force-app/main/default/objects/GPON__c/fields/GPONId__c.field-meta.xml
<CustomField>
    <fullName>GPONId__c</fullName>
    <externalId>true</externalId>
    <label>GPON Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>