force-app/main/default/objects/GPON__c/fields/InstallationAddress__c.field-meta.xml
<CustomField>
    <fullName>InstallationAddress__c</fullName>
    <description>Installation Address of the GPON (Gigabit Passive Optical Network)</description>
    <inlineHelpText>Installation Address of the GPON (Gigabit Passive Optical Network)</inlineHelpText>
    <label>Installation Address</label>
    <type>TextArea</type>
</CustomField>