force-app/main/default/objects/GPON__c/fields/IsCEMaintenance__c.field-meta.xml
<CustomField>
    <fullName>IsCEMaintenance__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that if CloudExtel is managing this GPON and FAT. If False it is not with CloudExtel but with the Customer and this field is there to differentiate between missing details and non serviced GPONs in the Case for Service Cloud Ticketing</description>
    <inlineHelpText>Indicates that if CloudExtel is managing this GPON and FAT. If False it is not with CloudExtel but with the Customer</inlineHelpText>
    <label>IsCEMaintenance</label>
    <type>Checkbox</type>
</CustomField>