force-app/main/default/objects/GPON__c/fields/IsMobilityConnected__c.field-meta.xml
<CustomField>
    <fullName>IsMobilityConnected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the GPON is connected to a Mobility Tower in which case the impact will be huge in case of an issue with this GPON</description>
    <inlineHelpText>This field indicates if the GPON is connected to a Mobility Tower in which case the impact will be huge in case of an issue with this GPON</inlineHelpText>
    <label>Is Mobility Connected</label>
    <type>Checkbox</type>
</CustomField>