force-app/main/default/objects/GPON__c/fields/OMContactEmail__c.field-meta.xml
<CustomField>
    <fullName>OMContactEmail__c</fullName>
    <label>O&amp;M Contact Email</label>
    <type>Email</type>
</CustomField>