force-app/main/default/objects/GPON__c/fields/Primary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GPONs</relationshipLabel>
    <relationshipName>GPONs</relationshipName>
    <type>Lookup</type>
</CustomField>