force-app/main/default/objects/GPON__c/fields/RSU__c.field-meta.xml
<CustomField>
    <fullName>RSU__c</fullName>
    <label>RSU</label>
    <length>8</length>
    <type>Text</type>
</CustomField>