force-app/main/default/objects/GPON__c/listViews/Airtel_GPONs.listView-meta.xml
<ListView>
    <fullName>Airtel_GPONs</fullName>
    <columns>NAME</columns>
    <columns>GPONId__c</columns>
    <columns>InstallationAddress__c</columns>
    <columns>FieldEngineer__c</columns>
    <columns>RSU__c</columns>
    <columns>IsMobilityConnected__c</columns>
    <columns>IsCEMaintenance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCEMaintenance__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Airtel GPONs</label>
</ListView>