force-app/main/default/objects/GPON__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GPONId__c</columns>
    <columns>InstallationAddress__c</columns>
    <columns>FieldEngineer__c</columns>
    <columns>RSU__c</columns>
    <columns>IsMobilityConnected__c</columns>
    <columns>IsCEMaintenance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>