force-app/main/default/objects/GPON__c/listViews/CloudExtel_Pune_GPONs.listView-meta.xml
<ListView>
    <fullName>CloudExtel_Pune_GPONs</fullName>
    <columns>NAME</columns>
    <columns>GPONId__c</columns>
    <columns>InstallationAddress__c</columns>
    <columns>FieldEngineer__c</columns>
    <columns>RSU__c</columns>
    <columns>IsMobilityConnected__c</columns>
    <columns>IsCEMaintenance__c</columns>
    <columns>Circles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCEMaintenance__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Circles__c</field>
        <operation>equals</operation>
        <value>Pune</value>
    </filters>
    <label>CloudExtel Pune GPONs</label>
</ListView>